add buttons to select different background colors

--- a/peek-a-boo.html
+++ b/peek-a-boo.html
@@ -10,9 +10,15 @@
   <body>
     <div class="container">
       <h1>Peek-a-boo</h1>
-      <p><strong>Peek-a-boo</strong> is an ancient game of mystery and deceit</p>
+      <h6>What's your favorite color?</h6>
+      <p>Click a button to choose what color you'd like this page to be:</p>
+      <button class="btn btn-success" id="green">Green</button>
+      <button class="btn btn-success" id="blue">Blue</button>
+      <button class="btn btn-success" id="red">Red</button>
+
+      <h4><strong>Peek-a-boo</strong> is an ancient game of mystery and deceit</h4>
       <div id="walrus-hidden">
-      <p>Let's play a game. <span class="clickable">Click here</span> to see the surprise!</p>
+      <p>Let's play a game! <span class="clickable">Click here</span> to see the surprise!</p>
       </div>
       <div id="walrus-showing">
         <p>What a cute walrus! <span class="clickable">Click here</span> to hide her again.</p>
